...
    func start() {
        let homeCoordinator = setupTabChildCoordinator(coordinator: HomeCoordinator(navigationController: UINavigationController()),
                                                       title: "Home",
                                                       iconName: "house.fill")
        
        let expenseCoordinator = setupTabChildCoordinator(coordinator: ExpenseCoordinator(navigationController: UINavigationController()),
                                                          title: "New Expense",
                                                          iconName: "plus")
        
        let cameraCoordinator = setupTabChildCoordinator(coordinator: CameraCoordinator(rootViewController: UIViewController()),
                                                          title: "Camera",
                                                          iconName: "Camera",
                                                          exposed: true)
        
        let expenseListCoordinator = setupTabChildCoordinator(coordinator: ExpenseListCoordinator(navigationController: UINavigationController()),
                                                              title: "Expenses",
                                                              iconName: "dollarsign.circle.fill")
        
        let settingsCoordinator = setupTabChildCoordinator(coordinator: SettingsCoordinator(navigationController: UINavigationController()),
                                                           title: "Settings",
                                                           iconName: "gear")
        
        childCoordinators.append(homeCoordinator)
        childCoordinators.append(expenseCoordinator)
        childCoordinators.append(cameraCoordinator)
        childCoordinators.append(expenseListCoordinator)
...
