...
                                            <constraint firstAttribute="width" constant="200" id="hfc-vD-bXg"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <inset key="contentEdgeInsets" minX="12" minY="0.0" maxX="0.0" maxY="0.0"/>
                                        <inset key="titleEdgeInsets" minX="12" minY="0.0" maxX="-12" maxY="0.0"/>
                                        <state key="normal" title="Log out" image="power" catalog="system">
                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="bold"/>
                                        </state>
                                        <connections>
                                            <action selector="logoutTapped:" destination="6p9-HU-g7O" eventType="touchUpInside" id="1qL-B3-DVd"/>
                                        </connections>
                                    </button>
...
